# compute-vp9

./: .gitignore  CMakeLists.txt  LICENSE  README.md  apply_vulkan_texture.py  gen_matrices.py  install.sh  matrices.glsl  output_log.txt
.github/workflows/: ci.yml
cmake/: CompileShaders.cmake
include/compute_vp9/: decoder.h
shaders/: vp9_idct.comp.glsl  vp9_intra_pred.comp.glsl  vp9_loopfilter.comp.glsl  vp9_mc.comp.glsl  vp9_nv12_pack.comp.glsl
src/backend/vulkan/: shader_registry.c  vulkan_backend.c  vulkan_backend.h  vulkan_utils.c
src/decoder/: vp9_adapt.c  vp9_bitstream.c  vp9_bitstream.h  vp9_compressed_hdr.c  vp9_decoder.c  vp9_default_probs.h  vp9_dequant.h  vp9_entropy.c  vp9_entropy.h  vp9_frame.c  vp9_frame.h  vp9_kf_tile.c  vp9_parsed_frame.c  vp9_parsed_frame.h  vp9_reconstruct.c  vp9_reconstruct.h  vp9_tile.c  vp9_tile.h  vpx_reader.c  vpx_reader.h
src/vaapi/: vaapi_config.c  vaapi_driver.c  vaapi_entrypoint.c  vaapi_surface.c
tests/: CMakeLists.txt  benchmark.c  test_bitstream.c  test_decoder.c  test_ivf_header.c  vp9_synth.h
